--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./source/favicon-32x32.png">
   <link rel="stylesheet" href="style.css" type="text/css">
   
   <title>Frontend Mentor | QR code component</title>
@@ -23,9 +23,8 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">isaac</a>.
   </div>
-  <div>
     <div class="container">
       <div class="card">
         <div class="img-wrapper">
@@ -38,7 +37,6 @@
        </div>
       
       
-    </div>
   </div>
 </body>
 </html>
