--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-
+<head>
   Improve your front-end skills by building projects
 
   Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
@@ -24,9 +24,14 @@
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">isaac</a>.
+    <nav>
+
+    </nav>
+</head>
+ 
   </div>
-    <div class="container">
-      <div class="card">
+    <main class="container">
+      <section class="card">
         <div class="img-wrapper">
           <img src="./source/image-qr-code.png" alt="qr=code" style="width: 300px;"/>
         </div>
@@ -34,9 +39,8 @@
             <h2>Improve your front-end <br>skills by building projects</h2>
             <p>Scan the QR code to visit Front-end Mentor and take your coding skills to the next level</p>
           </div>
-       </div>
-      
-      
-  </div>
+        </section>
+      </main>
+      <footer><p>&copy; isaac</p></footer>
 </body>
 </html>
